# energy_auction

./: .gitignore  Anchor.toml  Readme.md  auction_old_test.ts  energy_auction.txt  lib_prev.txt  package-lock.json  package.json  plan.md  prompt  prompt2
js/: compute_mint_auth.js  package-lock.json  package.json
programs/energy_auction/: Cargo.toml
programs/energy_auction/src/: lib.rs
tests/: README.md  basic-flow.test.ts  edge-cases.test.ts  emergency-controls.test.ts  energy_auction.ts  governance.test.ts  integration.test.ts  security.test.ts  test-setup.ts
